--- a/bower.json
+++ b/bower.json
@@ -16,8 +16,9 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "^3.1.1",
+    "jquery": "2.2.4",
     "bootstrap": "^3.3.7",
+    "bootstrap-material-design": "4.0.2",
     "angular": "~1.5.8",
     "angular-route": "~1.5.8",
     "angular-resource": "~1.5.0",
@@ -30,8 +31,12 @@
     "firebase": "~3.4.0",
     "angularfire": "~2.0.2"
   },
+  "devDependencies": {
+    "jquery": "2.2.4",
+    "bootstrap-material-design": "0.5.10"
+  },
   "resolutions": {
-    "bootstrap": "^3.3.7",
-    "jquery": "1.9.1 - 3"
+    "bootstrap": "~3.3.6",
+    "bootstrap-material-design": "0.5.10"
   }
 }
