--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "angular-loader": "~1.5.0",
     "angular-i18n": "~1.5.0",
     "firebase": "~3.4.0",
-    "angularfire": "~2.0.2"
+    "angularfire": "~2.0.2",
+    "arrive": "^2.3.1"
   },
   "devDependencies": {
     "jquery": "2.2.4",
