--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "angular-i18n": "~1.5.0",
     "firebase": "~3.4.0",
     "angularfire": "~2.0.2",
-    "arrive": "^2.3.1"
+    "arrive": "^2.3.1",
+    "ngInfiniteScroll": "#1.0.0"
   },
   "devDependencies": {
     "jquery": "2.2.4",
