--- a/bower.json
+++ b/bower.json
@@ -39,6 +39,7 @@
   },
   "resolutions": {
     "bootstrap": "~3.3.6",
-    "bootstrap-material-design": "0.5.10"
+    "bootstrap-material-design": "0.5.10",
+    "angular": "1.5.8"
   }
 }
