--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,45 @@
 node_modules/
 bower_components/
 builds/development/libs/**/*
+builds/development/img/facebook.png
+builds/dist/libs/font-awesome/less/path.less
+builds/development/img/google.png
+builds/dist/css/font-awesome.min.css
+builds/dist/img/facebook.png
+builds/dist/img/google.png
+builds/dist/libs/font-awesome/HELP-US-OUT.txt
+builds/dist/libs/font-awesome/css/font-awesome.css
+builds/dist/libs/font-awesome/css/font-awesome.min.css
+builds/dist/libs/font-awesome/fonts/FontAwesome.otf
+builds/dist/libs/font-awesome/fonts/fontawesome-webfont.eot
+builds/dist/libs/font-awesome/fonts/fontawesome-webfont.svg
+builds/dist/libs/font-awesome/fonts/fontawesome-webfont.ttf
+builds/dist/libs/font-awesome/fonts/fontawesome-webfont.woff
+builds/dist/libs/font-awesome/fonts/fontawesome-webfont.woff2
+builds/dist/libs/font-awesome/less/animated.less
+builds/dist/libs/font-awesome/less/bordered-pulled.less
+builds/dist/libs/font-awesome/less/core.less
+builds/dist/libs/font-awesome/less/fixed-width.less
+builds/dist/libs/font-awesome/less/font-awesome.less
+builds/dist/libs/font-awesome/less/icons.less
+builds/dist/libs/font-awesome/less/larger.less
+builds/dist/libs/font-awesome/less/list.less
+builds/dist/libs/font-awesome/less/mixins.less
+builds/dist/libs/font-awesome/less/rotated-flipped.less
+builds/dist/libs/font-awesome/less/screen-reader.less
+builds/dist/libs/font-awesome/less/stacked.less
+builds/dist/libs/font-awesome/less/variables.less
+builds/dist/libs/font-awesome/scss/_animated.scss
+builds/dist/libs/font-awesome/scss/_bordered-pulled.scss
+builds/dist/libs/font-awesome/scss/_core.scss
+builds/dist/libs/font-awesome/scss/_fixed-width.scss
+builds/dist/libs/font-awesome/scss/_icons.scss
+builds/dist/libs/font-awesome/scss/_larger.scss
+builds/dist/libs/font-awesome/scss/_list.scss
+builds/dist/libs/font-awesome/scss/_mixins.scss
+builds/dist/libs/font-awesome/scss/_path.scss
+builds/dist/libs/font-awesome/scss/_rotated-flipped.scss
+builds/dist/libs/font-awesome/scss/_screen-reader.scss
+builds/dist/libs/font-awesome/scss/_stacked.scss
+builds/dist/libs/font-awesome/scss/_variables.scss
+builds/dist/libs/font-awesome/scss/font-awesome.scss
